# barprompt

./: .env.template  .gitignore  .pre-commit-config.yaml  20250409_185158_mock_data_clean.csv  README.md  Whispering_to_Claude.md  __init__.py  barprompt.py  dataset_generation.py  evaluation_config.yaml  mock_data.csv  natan_dataset_generation.py  pyproject.toml
cronjob-copy-langfuse-prompts/: README.md  copy_prompts.py  requirements.txt  sync_prompts.sh  template.env  verify_prompts.py
